# ReaderFree

./: .gitignore  README.md  ROADMAP.md
.claude/: settings.local.json
backend/: config.example.toml  pipeline.py  pyproject.toml  scratch_check_drift.py  server.py
backend/src/: __init__.py  align.py  build.py  chapter_range.py  chapter_split.py  config.py  cover.py  library.py  metadata.py  package.py  sanitize.py  segment.py  tts.py  voices.py  worker.py
backend/src/extract/: __init__.py  epub.py  pdf.py  txt.py
backend/tests/: test_chapter_range.py  test_chapter_split.py  test_config.py  test_cover.py  test_extract_epub.py  test_extract_pdf.py  test_extract_txt.py  test_library.py  test_metadata.py  test_mock_regression.py  test_package.py  test_sanitize.py  test_segment.py  test_server.py  test_voices.py  test_worker.py
backend/tests/fixtures/: bras_cubas_excerpt.expected.vtt  bras_cubas_excerpt.txt
docs/: phase2-research.md
frontend/: package.json  pnpm-lock.yaml  vitest.config.ts
frontend/src/app/: layout.tsx  manifest.ts  page.tsx
frontend/src/app/reader/[id]/: page.tsx
frontend/src/components/: Library.tsx  Player.tsx  TextViewer.tsx
frontend/src/lib/: import.ts  storage.ts  sync.ts  types.ts  vtt.test.ts  vtt.ts
frontend/src/sw/: service-worker.ts
