[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "readerfree-backend"
version = "0.1.0"
description = "Pipeline: extrai texto -> TTS (XTTS-v2) -> alinha (WhisperX) -> empacota MP3 + VTT"
requires-python = ">=3.11"
authors = [{ name = "ReaderFree" }]
readme = { text = "Backend do ReaderFree — ver README.md na raiz.", content-type = "text/plain" }

dependencies = [
    # TTS
    "coqui-tts>=0.24.0",
    # Forced alignment por palavra
    "whisperx>=3.1.1",
    # Extração de texto
    "pypdf>=4.3.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.3",
    # Áudio
    "pydub>=0.25.1",
    # NLP básico (tokenização de sentenças pt-br)
    "nltk>=3.9",
    # CLI e UI de terminal
    "click>=8.1.7",
    "rich>=13.7.1",
    # Gravação de voz (Fase 3)
    "sounddevice>=0.4.7",
    "soundfile>=0.12.1",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
readerfree = "pipeline:cli"

[tool.setuptools]
py-modules = ["pipeline"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
