[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "readerfree-backend"
version = "0.1.0"
description = "Pipeline: extrai texto -> TTS (XTTS-v2) -> alinha (WhisperX) -> empacota MP3 + VTT"
requires-python = ">=3.11,<3.13"
authors = [{ name = "ReaderFree" }]
readme = { text = "Backend do ReaderFree — ver README.md na raiz.", content-type = "text/plain" }

# ---- Leves: rodam em qualquer máquina, inclusive sem GPU ou com --mock.
#      Versões fixadas (==) — o instalador Windows (Fase 7.5) depende disso.
dependencies = [
    "click==8.1.7",
    "rich==13.9.4",
    "nltk==3.9.1",
    "pypdf==5.1.0",
    "EbookLib==0.18",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "pydub==0.25.1",
    "soundfile==0.12.1",
    "numpy==1.26.4",
]

[project.optional-dependencies]
# ---- Pesadas: modelos de IA. Só instala na máquina-alvo (PC com GPU).
#      Rode com:   uv pip install -e .[tts]
#
# Notas de pinning (confirmadas em validação real GPU RTX 4060 Ti, abr/2026):
# - torch 2.5.1 é a versão sob a qual o stack inteiro (coqui-tts 0.24.3 +
#   whisperx 3.3.1 + transformers 4.40.2) bate. 2.3.1 não suporta wheels
#   recentes do whisperx; 2.6+ ainda não foi validado.
# - transformers travado em 4.40.x: a 4.41 removeu LogitsWarper, que o
#   coqui-tts 0.24.3 importa diretamente.
#   https://github.com/huggingface/transformers/pull/31292
# - setuptools travado em 69.5.x: a 70+ removeu pkg_resources do site-packages
#   por default; whisperx 3.3.1 ainda usa pkg_resources internamente.
# - Para GPU: depois do `uv pip install -e .[tts]`, reinstale torch/torchaudio
#   pelo índice CUDA do PyTorch (ver README "Backend — primeiro uso").
tts = [
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "transformers==4.40.2",
    "setuptools==69.5.1",
    "coqui-tts==0.24.3",
    "whisperx==3.3.1",
    "sounddevice==0.5.1",
]
# ---- Dev: testes + lint. Roda em qualquer máquina, sem modelos.
#      fpdf2 é só para gerar PDFs de fixture nos testes — não roda em runtime.
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "ruff==0.7.4",
    "fpdf2==2.8.1",
]

[project.scripts]
readerfree = "pipeline:cli"

[tool.setuptools]
py-modules = ["pipeline"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
